--- a/bin/views/modify-user.pug
+++ b/bin/views/modify-user.pug
@@ -1,9 +1,9 @@
 extends index.pug 
 
-block view_actions
+block view_actions 
     a(href="users.html" class="btn btn-outline-danger btn-lg") Torna indietro
 
-block content
+block content 
     form(class="needs-validation")
         div(class="row")
             div(class="col")
@@ -24,16 +24,15 @@ block content
                 div(class="row")
                     label(class="col-form-label") Data di nascita:
                 div(class="row")
-                    input#day(type="number" class="col form-control" placeholder="gg" min="1" max="31" required)
-                    input#month(type="number" class="col form-control" placeholder="mm" min="1" max="12" required)
-                    input#year(type="number" class="col form-control" placeholder="aaaa" min="1900" max="3000" required)
-                
+                    input#day(type="text" class="col form-control" placeholder="gg" maxlength="2" required)
+                    input#month(type="text" class="col form-control" placeholder="mm" maxlength="2" required)
+                    input#year(type="text" class="col form-control" placeholder="aaaa" maxlength="4" required)
             div(class="col")
             div(class="col-4 bg-body rounded shadow-lg")
                 include includes/user/city-select.pug
             div(class="col")
             div(class="col-3 bg-body rounded shadow-lg")
-                include includes/user/sex-select.pug
+                include includes/user/sex-select.pug          
             div(class="col")
         
         div(class="row" style="padding-top: 2vh;")
@@ -45,10 +44,9 @@ block content
                 label(for="formFile" class="form-label") Scegli una foto:
                 input#pic(class="form-control" type="file" accept=".jpg,.jpeg,.png")
             div(class="col")
-            div(class="col-3 bg-body rounded shadow-lg ext-center position-relative")
-                button#pre-add-user(class="w-100 h-100 position-absolute top-50 start-50 translate-middle btn btn-primary btn-lg" type="button") Aggiungi
+            div(class="col-3 bg-body rounded shadow-lg text-center position-relative")
+                button#pre-modify-user(class="w-100 h-100 position-absolute top-50 start-50 translate-middle btn btn-primary btn-lg" type="button") Modifica
             div(class="col")
-
 
     div(aria-live="polite" aria-atomic="true" class="d-flex position-absolute top-50 start-50 translate-middle")
         div#error-toast(class="toast" role="alert" aria-live="assertive" aria-atomic="true")
@@ -63,10 +61,10 @@ block content
             div(class="toast-header text-bg-warning")
                 strong(class="fs-3 me-auto") ATTENZIONE
             div(class="toast-body")
-                p(class="fs-4") Confermi di voler aggiungere il volontario?
+                p(class="fs-4") Confermi di voler modificare il volontario?
                 div(class="mt-2 pt-2 border-top")
-                    a#add-user(href="users.html" class="btn btn-primary btn-lg") Aggiungi
+                    a#modify-user(href="users.html" class="btn btn-primary btn-lg") Modifica
                     button(type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="toast") Chiudi
-            
-block js
-    script(src="../js/add-user.js")
+
+block js 
+    script(src="../js/modify-user.js")
