--- a/bin/views/modify-event.pug
+++ b/bin/views/modify-event.pug
@@ -1,6 +1,6 @@
 extends index.pug 
 
-block view_actions
+block view_actions 
     a(href="events.html" class="btn btn-outline-danger btn-lg") Torna indietro
 
 block content 
@@ -31,7 +31,7 @@ block content
         
         div(class="row" style="padding-top: 2vh;")
             div(class="col")
-            dic(class="col-4 bg-body rounded shadow-lg")
+            div(class="col-4 bg-body rounded shadow-lg")
                 include includes/event/site-field.pug
             div(class="col")
             div(class="col-7 bg-body rounded shadow-lg")
@@ -42,7 +42,7 @@ block content
             div(class="col-1")
             div#add-users-btn-field(class="col")
                 div(data-bs-trigger="hover" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="Per poter scegliere i volontari bisogna prima impostare data e ora di inizio e fine evento.")
-                    button#add-users(class="w-100 btn btn-success btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#filter-selection" disabled) Aggiungi partecipanti
+                    button#add-users(class="w-100 btn btn-success btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#filter-selection") Aggiungi partecipanti
             div(class="col-1")
         
         div(class="row" style="padding-top: 3vh;")
@@ -58,37 +58,33 @@ block content
                             th(scope="col") Città
                             th(scope="col") Incarico
                             th(scope="col") 
-                        
-                    tbody#added-users-table(class="table-group-divider")            
+
+                    tbody#added-users-table(class="table-group-divider")
             div(class="col-1")
         
         div(class="row" style="padding-top: 2vh;")
             div(class="col-1")
             div(class="col pt-3 pb-5")
-                button#pre-add-event(class="w-100 btn btn-primary btn-lg" type="button") Crea
+                button#pre-modify-event(class="w-100 btn btn-primary btn-lg" type="button") Modifica
             div(class="col-1")
         
-
     div(aria-live="polite" aria-atomic="true" class="d-flex position-absolute top-50 start-50 translate-middle")
         div#error-toast(class="toast" role="alert" aria-live="assertive" aria-atomic="true")
             div(class="toast-header text-bg-danger")
                 strong(class="fs-3 me-auto") ERRORE
                 button(type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close")
-            
             div(class="toast-body")
                 p#error-fields(class="fs-4" style="white-space: pre-line;")
-            
+    
     div(aria-live="assertive" aria-atomic="true" class="d-flex position-absolute top-50 start-50 translate-middle")
         div#confirm-toast(class="toast" role="alert" aria-live="assertive" aria-atomic="true")
             div(class="toast-header text-bg-warning")
                 strong(class="fs-3 me-auto") ATTENZIONE
-            
             div(class="toast-body")
-                p(class="fs-4") Confermi di voler creare l'evento?
+                p(class="fs-4") Confermi di voler modificare l'evento?
                 div(class="mt-2 pt-2 border-top")
-                    a#add-event(href="events.html" class="btn btn-primary btn-lg") Crea
+                    a#modify-event(href="events.html" class="btn btn-primary btn-lg") Modifica
                     button(type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="toast") Chiudi
-
 
     div#filter-selection(class="modal fade" tabindex="-1" aria-labelledby="filter-selection-title" aria-hidden="true")
         div(class="modal-dialog")
@@ -100,17 +96,15 @@ block content
                 div(class="modal-body")
                     div(class="row")
                         div(class="col")
-                            label(class="col-form-label") Nome:
-                            input(type="text" class="form-control" id="user-name" placeholder="Nome")
-                        
+                            label(class="col-form-label") Nome
+                            input#user-name(type="text" class="form-control" placeholder="Nome")
                         div(class="col")
                             label(class="col-form-label") Cognome:
-                            input(type="text" class="form-control" id="user-surname" placeholder="Cognome")
-                    
+                            input#user-surname(type="text" class="form-control" placeholder="Cognome")
+                        
                     div(class="row")
                         div(class="col")
                             include includes/user/role-select.pug
-                        
                         div(class="col")
                             include includes/user/city-select.pug
                     
@@ -131,8 +125,8 @@ block content
                                                             th(scope="col") Città
                                                             th(scope="col") Incarico
                                                             th(scope="col") 
-
+                                                        
                                                     tbody#filtered-users-list
 
 block js
-    script(src="../js/add-event.js")
+    script(src="../js/modify-event.js")
