--- a/bin/views/add-event.pug
+++ b/bin/views/add-event.pug
@@ -86,7 +86,7 @@ block content
             div(class="toast-body")
                 p(class="fs-4") Confermi di voler creare l'evento?
                 div(class="mt-2 pt-2 border-top")
-                    a#add-event(href="events.html" class="btn btn-primary btn-lg") Crea
+                    a#add-event(href="events.html" class="btn btn-primary btn-lg me-3") Crea
                     button(type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="toast") Chiudi
 
 
