--- a/bin/views/add-user.pug
+++ b/bin/views/add-user.pug
@@ -65,7 +65,7 @@ block content
             div(class="toast-body")
                 p(class="fs-4") Confermi di voler aggiungere il volontario?
                 div(class="mt-2 pt-2 border-top")
-                    a#add-user(href="users.html" class="btn btn-primary btn-lg") Aggiungi
+                    a#add-user(href="users.html" class="btn btn-primary btn-lg me-3") Aggiungi
                     button(type="button" class="btn btn-secondary btn-lg" data-bs-dismiss="toast") Chiudi
             
 block js
